--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Login page</title>
   </head>
-  <body>
+  <script>
+function myFunction() {
+  alert("Page is loaded");
+}
+</script>
+  <body onload=myFunction()>
     <!-- <form action="/" method="post"> -->
       <!-- <input type="email" name="email" placeholder="Enter your Email"> -->
       <!-- <input type="password" name="password" placeholder="password"> -->
