--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@
                 <div class="col-md-3">&nbsp;</div>
                 <div class="col-md-6">
     <h1>WELCOME TO SAP</h1>
-    <a href="/logout" class="btn btn-primary">Logout</a>
+    <a href="/moreinfo" class="btn btn-primary">More info</a>
     </div>
   </body>
 </html>
